--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /crowdin-translations/*.json
+  - source: /crowdin-translations/*
     translation: /crowdin-translations/translations/%two_letters_code%/%file_name%.%file_extension%
